templates/footer.html поправлено templates/index.html поправлено

--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -1,10 +1,11 @@
-define {{"index"}}
+ {{define "index"}}
 
 {{template "header"}}
-     <main role main="main" class = "inner cover">
+<main role main="main" class = "inner cover">
     <h1 class ="cover-heading">Главная страница.</h1>
+    <p class = "lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore sit ratione necessitatibus reiciendis adipisci cumque beatae sunt rerum quaerat quo ad optio inventore, esse porro, ipsa quisquam exercitationem at laborum.</p>
     <!--заглушка, чтобы страница не была пустой -->
-    <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed molestiae quos accusamus provident, maxime aspernatur quae. Ipsa ipsam officia et, asperiores dolores molestias, illo dolore quaerat error perferendis maiores minima.</p>
+    <p class="lead"></p>
         <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Узнать больше</a>
     </p>
     </main>
