--- a/www/templates/footer.html
+++ b/www/templates/footer.html
@@ -1,10 +1,11 @@
-{{define dooter }}
-<footer class="mt-auto text-white-50">
-    <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
-  </footer>
-</div>
-<div class="mallbery-caa" style="z-index: 2147483647 !important; text-transform: none !important; position: fixed;"></div></body>
+{{define "footer" }}
+<footer class="mastfoot mt-auto">
+  <div class ="inner">
+    <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>   
+  </div>
+</footer>
+
+<div >
 <body>
-</body>
 </html> 
 {{end}}
