--- a/www/templates/footer.html
+++ b/www/templates/footer.html
@@ -1,10 +1,9 @@
 {{define "footer" }}
 <footer class="mastfoot mt-auto">
   <div class ="inner">
-    <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>   
+    <p>Cover template for <a href="https://getbootstrap.com/" >Bootstrap</a>, by <a href="https://twitter.com/mdo" >@mdo</a>.</p>   
   </div>
 </footer>
-
 <div >
 <body>
 </html> 
