--- a/www/templates/header.html
+++ b/www/templates/header.html
@@ -8,6 +8,7 @@
     <title>Главаная страница</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://getbootstrap.com/docs/4.5/examples/cover/cover.css">
+    <link rel="stylesheet" href="static/css/main.css">
 </head>
 <body class="d-flex h-100 text-center text-white bg-dark">
     
